Generate the absolute WSDL location through java.net.URI
ServiceGenerator.writeAbsWSDLLocation emitted "new URL(<location>)" into the
static initializer of every generated service class whose WSDL location is
absolute. Every java.net.URL constructor that parses a string is deprecated
since Java 20, and this warning lands where nobody can act on it: the service
class is regenerated on each build, so it cannot be edited, and no wsimport
option changes its shape. Projects compiling generated sources with
-Xlint:deprecation carry a permanent warning, and those building with -Werror
have to exclude the generated tree.

The location is now built with "new URI(<location>).toURL()". URI.toURL() still
throws MalformedURLException and new URI(String) throws URISyntaxException, so
both are caught and stored in the _EXCEPTION field exactly as before; a location
that cannot be turned into a URL keeps surfacing as a WebServiceException when
the service is instantiated rather than as an ExceptionInInitializerError.
URI.create() would have been shorter but throws an unchecked
IllegalArgumentException, which would escape the static initializer and lose
that behavior. codemodel cannot generate a multi-catch - JCatchBlock holds a
single exception type - hence the two catch blocks.

Note that new URI(String) is stricter than new URL(String): a location holding a
character that is illegal in a URI but tolerated by URL, such as a literal
space, {, }, | or ^, now ends up in the _EXCEPTION field instead of producing a
URL. Such a -wsdllocation was never a legal URI to begin with.

writeClassLoaderBaseResourceWSDLLocation, used with
-XuseBaseResourceAndURLToLoadWSDL, keeps its deprecated new URL(URL, String).
There is no drop-in replacement for it: the context is Xxx.class.getResource("."),
which for a class loaded from a jar is an opaque jar: URI, and URI.resolve
against an opaque base returns its argument unchanged, so the URI route would
break jar-packaged services.

Fixes #817

Signed-o